--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
-.formulario {
-    background-color: aquamarine;
+Form {
+    gap: 10px;
+}
+
+.icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    font-size: 30px;  
+    margin-bottom: 10px;
+}
+.icons a {
+    text-decoration: none;
+    color: black;
+    border-radius: 50%;
+}
+.icons a:hover{
+    color: rgb(57, 57, 57);
+}
+
+.container-card {
+    min-height: 100vh;
+    background: radial-gradient(circle at left, #00ff80, #d6ff09);
 }
